2010-10-13  Anders Carlsson  <andersca@apple.com>

        Build fix.

        * Shared/cg/BackingStoreCG.cpp:

2010-10-13  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=43987
        Switch XMLHttpRequest, FileReader, and FileReaderSync to use a Stringbuilder
        to construct their internal result string.  Remove ScriptString (this is now
        redundant).

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::dispatchDidLoadResourceByXMLHttpRequest):
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.h:

2010-10-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Send over find indicator information to the UI process
        https://bugs.webkit.org/show_bug.cgi?id=47612

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::setFindIndicator):
        Add stub.

        * UIProcess/WebPageProxy.messages.in:
        Add SetFindIndicator.

        * WebProcess/WebPage/FindController.cpp:
        (WebKit::FindController::FindController):
        Initialize m_isShowingFindIndicator.

        (WebKit::FindController::findString):
        Update the find indicator if needed.

        (WebKit::FindController::updateFindIndicator):
        Compute find indicator information, paint the find indicator text into a 
        backing store and send it over.

        (WebKit::FindController::resetFindIndicator):
        Send a SetFindIndicator message with a null backing store.

2010-10-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add BackingStoreQt.cpp file with stubbed out BackingStore member functions
        https://bugs.webkit.org/show_bug.cgi?id=47614

        * Shared/BackingStore.h:
        Remove unused include.

        * Shared/qt/BackingStoreQt.cpp: Added.
        (WebKit::BackingStore::createGraphicsContext):